[package]
name = "gguf-swiss-pack"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
half.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
gguf-swiss.workspace = true
